* Thu Mar 22 2012
- More reliable localization directory detection.
- Shell 3.3.91 is around, updating compatible version list.
- Release as v11

* Wed Mar 21 2012
- Totally new layout for the configuration utility
- More informative base strings
- Added a localization template
- Italian translation adapted to the last changes again
- Local installation shall not overwrite settings.json
- French localization
- Release as version 10

* Tue Mar 20 2012
- optparse module replaced by the pygobject GOptionContext wrapper
- hashlib.md5 replaced by the faster GQuark hashing
- os file operation replaced by GFile functions
- function _() renamed to g() as it clashes with the _ built-in symbol
- fixed a problem preventing localization from showing on option help
- Italian localization adapted to the latest option changes
- script for local installation fixed

* Mon Mar 19 2012
- Italian localization

* Sun Mar 18 2012
- Extension and configurator more strictly compliant to the HACKING rules
- Autotools scripts added, with modifications to metadata.json
- extension and configurator prepared for localization
- More info files added
- configurator code "restyled"
- don't reconnect all the signals on reload in configurator

* Wed Mar 14 2012 - version 9
- oops... added a button that handles the default profile

* Tue Mar 13 2012 - version 8
- fixed a bug which made a menu entry get disabled when unique
- fixed a bug on error output on settings file missing
- WebAppMenu class renamed to WebAppExtension
- configurator icon
- "advanced options" renamed to "advanced settings"
- configurator window size changed
- better configurator layout
- configurator buttons for profiles
- same text for context menu items and toolbar button tooltips 
- reload button now has the correct text
- sortable tree view columns
- spawn application handler from configurator

* Thu Feb 09 2012 - version 7
- Fixed a little glitch on submenu sorting.
- Major ab_insert() code cleanup.
