@@ -6,6 +6,7 @@ metadata.json: metadata.json.in $(top_builddir)/config.status
 		-e "s|[@]uuid@|$(uuid)|" \
 		-e "s|[@]extension_url@|$(extension_url)|" \
 		-e "s|[@]extension_version@|$(extension_version)|" \
+		-e "s|[@]system_locale_dir@|$(localedir)|" \
 		$< > $@
 
 CLEANFILES = metadata.json
