@@ -4,6 +4,7 @@
     "name": "Web Application Menu",
     "url": "@extension_url@", 
     "description": "This extension lets you run the Web Applications saved by Epiphany from a panel menu. It can also handle many profiles and show them as submenus, if you like. A setup application is provided to help you eventually tweak these and more advanced settings.",
-    "version": @extension_version@
+    "version": @extension_version@,
+    "system-locale-dir": "@system_locale_dir@"
 }
 
