@@ -1,3 +1,8 @@
+* Sat Mar 24 2012
+- Default installation prefix shall be the same as GS's one.
+- Hardcode the system locale dir in metadata.json (via autotools)
+- In "legacy mode", fetch the system locale dir from metadata.json
+
 * Thu Mar 22 2012
 - More reliable localization directory detection.
 - Shell 3.3.91 is around, updating compatible version list.
